fix: unexpected line break in spoiler text

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -847,9 +847,9 @@
   &.status__content--with-spoiler {
     white-space: normal;
 
-    .status__content__text {
-      white-space: pre-wrap;
-    }
+    //.status__content__text {
+    //  white-space: pre-wrap;
+    //}
   }
 
   .emojione {
